Add new tab in stats mode Add ones from sixes read, improve sheet duplications detection